# negativa-ml

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
examples/: README.md
examples/demo/: build.sh  debloat.sh  demo.cu  demo.h  main.cpp
src/: main.rs
src/elf/: elf.rs  mod.rs
src/locator/: gpu_code.rs  locator.rs  mod.rs
src/reconstructor/: mod.rs  reconstructor.rs
src/tracer/: kernel_detector.cpp  tracer.rs
src/utils/: utils.rs
tests/fixtures/: libdemo.3.sm_70.cubin  libdemo.4.sm_75.cubin
