[package]
name = "negativa_ml"
version = "0.0.1"
edition = "2021"
default-run = "negativa_ml"

[features]
default = []
gpu = ["rust-gpu-tools"]


[dependencies]
nix = { version = "0.27.1", features = ["ptrace", "process","signal"] }
tempfile = "3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
proc-maps = "0.3.2"
env_logger = "0.11.1"
log = "0.4.20"
elf = "0.7.4"
libc = "0.2.153"
serde_json = "1.0"
rust-gpu-tools = {version="0.7.2", optional=true, features=["cuda"] }